welcome.lessons.welcome.bat.bool1.Diff21.scala.error
diff21:7: error: not found: value Maths
else  {s=2*(Maths.abs(21-n)) }
            ^diff21:7: error: type mismatch;
 found   : Unit
 required: Int
else  {s=2*(Maths.abs(21-n)) }
        ^